# peppi-py

./: .gitignore  .readthedocs.yaml  Cargo.toml  README.md  pyproject.toml  test.py  time.py
.github/workflows/: release.yml
docs/: conf.py  index.rst
docs/source/: modules.rst  peppi_py.frame.rst  peppi_py.game.rst  peppi_py.parse.rst  peppi_py.rst  peppi_py.util.rst
python/peppi_py/: __init__.py  frame.py  game.py  parse.py  util.py
src/: error.rs  lib.rs
tests/: test_peppi_py.py
