[package]
authors = ["melkor <hohav@fastmail.com>"]
name = "peppi-py"
version = "0.4.1"
edition = "2018"

[lib]
name = "peppi_py"
crate-type = ["cdylib"]

[dependencies]
arrow = "5.5"
peppi = "1.0.0-alpha.5"
pyo3 = { version = "0.14", features = ["abi3-py39", "extension-module"] }
serde = "1.0"
serde_json = "1.0"

[package.metadata.maturin]
requires-dist = ["pyarrow~=5.0"]

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
codegen-units = 1
incremental = false
rpath = false
