[package]
authors = ["melkor <hohav@fastmail.com>"]
name = "peppi-py"
version = "0.4.3"
edition = "2018"

[lib]
name = "peppi_py"
crate-type = ["cdylib"]

[dependencies]
arrow = "6.3"
peppi = "1.0.0-alpha.6"
pyo3 = { version = "0.15", features = ["abi3-py39", "extension-module"] }
serde = "1.0"
serde_json = "1.0"

[package.metadata.maturin]
requires-dist = ["pyarrow~=6.0"]

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
codegen-units = 1
incremental = false
rpath = false
