[package]
authors = ["melkor <hohav@fastmail.com>"]
name = "peppi-py"
version = "0.8.1"
edition = "2021"

[lib]
name = "peppi_py"
crate-type = ["cdylib"]

[dependencies]
arrow2 = "0.17"
peppi = "2.1"
pyo3 = { version = "0.25", features = ["abi3-py310", "extension-module", "generate-import-lib"] }
serde = "1.0"
serde_json = "1.0"

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
codegen-units = 1
incremental = false
rpath = false
